# find-me-a-bag

./: .env  .gitignore  Dockerfile  README.md  app.py  bags.json  cloudbuild.yaml  corpus.py  db_setup.py  get_gcp_token.py  main.py  nodes.py  pyproject.toml  state.py
agent/: main.py  nodes.py  state.py
assistant_agent/: _html_for_mail.py  graph.py  nodes.py  state.py
templates/: index.html
tests/: test_firestore.py  test_router.py
